--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,10 +30,13 @@ server:
 
 spring:
   profiles: prod
-
+  thymeleaf:
+    cache: true
 ---
 server:
   port: 8083
 
 spring:
   profiles: dev
+  thymeleaf:
+    cache: false
