--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,12 +7,12 @@ spring:
   resources:
     static-locations: classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
   profiles:
-#    active: dev
+    active: dev
   messages:
     basename: i18n.login
 
 server:
-  port: 8081
+  port: 8083
   thymeleaf:
       cache: false
       prefix:
