--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,10 @@ spring:
     username: root
     password: 123456
     url: jdbc:mariadb://localhost:3306/test
+#    initialization-mode: always
+#    schema:
+#      - classpath: sql/cinema.sql
+#      - classpath: sql/task.sql
   resources:
     static-locations: classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
   profiles:
