--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,7 @@ spring:
     static-locations: classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
   profiles:
     active: dev
+    # active: prod
   messages:
     basename: i18n.login
 
@@ -29,7 +30,7 @@ server:
 
 ---
 server:
-  port: 8082
+  port: 8080
 
 spring:
   profiles: prod
